ver 0.2 added downloading file
Signed-off-by: AlexLX2 <kolosoff.alex@gmail.com>